--- a/.github/workflows/release_tag.yml
+++ b/.github/workflows/release_tag.yml
@@ -2,7 +2,7 @@ name: Release Tags
 on:
   push:
     tags:
-      - "v*"
+      - "v*"  # 当推送以 v 开头的标签时触发
 
 jobs:
   docker:
@@ -17,19 +17,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Login to GitHub Container Registry (GHCR)
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ github.actor }}  # 使用 GitHub 用户名
+          password: ${{ secrets.GITHUB_TOKEN }}  # 使用 GitHub token
 
-      - name: Build Tag
+      - name: Build Tag and Push to GHCR
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: |
-            homeland/homeland:${{ steps.tagName.outputs.tag }}
+            ghcr.io/${{ github.repository_owner }}/homeland:${{ steps.tagName.outputs.tag }}  # 使用 GHCR 格式的标签
 
       - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+        run: echo ${{ steps.docker_build.outputs.digest }}  # 输出镜像的 digest
